hotfix: OpenAPI 빈 하나로 합침